--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: required
 services:
     - docker
 before_install:
-    - docker build -t nikunj/frontend -f Dockerfile.dev .
+    - docker build -t nikunj/frontend -f Dockerfile .
 script:
     - docker run -e CI=true nikunj/frontend npm run test -- --coverage
 
